[package]
name = "iluvatar_derive"
version.workspace = true
authors.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
categories.workspace = true
description.workspace = true

[dependencies]
quote = "1"
syn = { version = "2", features = ["full"] }

[lib]
proc-macro = true